[gd_scene load_steps=5 format=2]

[ext_resource path="res://lp_starting/HUD.gd" type="Script" id=1]
[ext_resource path="res://lp_starting/game-fonts/game_font.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TimeoutModal:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TimeoutModal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=45]
resource_name = "run_modal"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TimeoutModal:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.647059 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TimeoutModal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeoutModal" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLayer" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -227, 319 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Control/ScoreLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 129.0
margin_right = -26.0
margin_bottom = 190.0
grow_horizontal = 0
grow_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1234"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeMinLabel" type="Label" parent="Control/ScoreLayer"]
margin_left = 1698.0
margin_top = 60.0
margin_right = 1786.0
margin_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeColonLabel" type="Label" parent="Control/ScoreLayer"]
margin_left = 1790.0
margin_top = 60.0
margin_right = 1808.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeSecLabel" type="Label" parent="Control/ScoreLayer"]
margin_left = 1812.0
margin_top = 60.0
margin_right = 1900.0
margin_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="Control"]

[node name="TimeOutLabel" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -804.0
margin_top = -58.0
margin_right = 804.0
margin_bottom = 58.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TIME_OUT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 44 )
anims/run_modal = SubResource( 45 )

[connection signal="timeout" from="Control/GameTimer" to="." method="_on_GameTimer_timeout"]
